# advent-of-code-2023

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust-benchmark-updated.yml  rust-manual-full-benchmark.yml  rust.yml
cargo-template-day/: Cargo.toml
cargo-template-day/benches/: benchmark.rs  criterion.rs
cargo-template-day/src/: main.rs  part1.rs
day-01/: Cargo.toml
day-01/benches/: benchmark.rs  criterion.rs  divan.rs
day-01/src/: lib.rs  main.rs  part1.rs  part2.rs  part2_a.rs
day-02/: Cargo.toml
day-02/benches/: benchmark.rs  criterion.rs
day-02/src/: main.rs  part1.rs  part2.rs
day-03/: Cargo.toml
day-03/benches/: criterion.rs  divan.rs
day-03/src/: main.rs  part1.rs  part2.rs
day-04/: Cargo.toml
day-04/benches/: criterion.rs  divan.rs
day-04/src/: main.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/benches/: criterion.rs  divan.rs
day-05/src/: main.rs  part1.rs  part2.rs  part2_a.rs
day-06/: Cargo.toml
day-06/benches/: criterion.rs  divan.rs
day-06/src/: main.rs  part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: criterion.rs  divan.rs
day-07/src/: main.rs  part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: criterion.rs  divan.rs
day-08/src/: main.rs  part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: criterion.rs  divan.rs
day-09/src/: main.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: criterion.rs  divan.rs
day-10/src/: main.rs  part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: criterion.rs  divan.rs
src/: main.rs
(+3 files in other folders)
