[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion.rs"

[[bench]]
name = "divan"
harness = false
path = "benches/divan.rs"

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.4"

[dependencies]
