[package]
name = "day-07"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion.rs"

[[bench]]
name = "divan"
harness = false
path = "benches/divan.rs"

[dev-dependencies]
criterion = { workspace = true }
divan = { workspace = true }

[dependencies]
